1. 添加emui.scss,将所有的组件导入,之后只要导入emui.css就可以了 2. 添加flex布局

--- a/src/global/utils.scss
+++ b/src/global/utils.scss
@@ -1,6 +1,16 @@
-.t-left{
+.t-left {
   text-align: left;
 }
-.t-right{
+
+.t-right {
   text-align: right;
+}
+
+@for $i from 1 through 10 {
+  .wid-#{$i} {
+    width: (10% * $i);
+  }
+  .hei-#{$i} {
+    height: (10% * $i);
+  }
 }
