--- a/src/global/rem.scss
+++ b/src/global/rem.scss
@@ -2,7 +2,8 @@ html{
   font-size:20px;
 }
 body{
-  font-size: 0.8rem;
+  font-size: 1rem;
   margin: 0px;
   line-height: 2rem;
+  font-family: "Microsoft YaHei";
 }
