添加按钮transition属性

--- a/src/base/button/button.scss
+++ b/src/base/button/button.scss
@@ -19,6 +19,8 @@ $btn_border_width:1px;
   margin: 1%;
   border: $btn_border_width;
   border-color: map_get($primary_color, active);
+  transition: background-color 0.1s ease;
+
 }
 
 .btn-primary {
