--- a/src/utils/utils.scss
+++ b/src/utils/utils.scss
@@ -3,13 +3,13 @@
     margin-left: 10%*$i;
   }
   .m-r-#{$i} {
-    margin-left: 10%*$i;
+    margin-right: 10%*$i;
   }
   .m-t-#{$i} {
-    margin-left: 10%*$i;
+    margin-top: 10%*$i;
   }
   .m-b-#{$i} {
-    margin-left: 10%*$i;
+    margin-bottom: 10%*$i;
   }
 
   .p-l-#{$i} {
