--- a/src/base/button/button.scss
+++ b/src/base/button/button.scss
@@ -14,9 +14,12 @@ $btn_border_width:1px;
   color: #FFFFFF;
   font-size: $btn_font_size;
   outline: none;
-  width: 98%;
+  width: 100%;
+  box-sizing: border-box;
+  height: 2rem;
   padding: 0.5rem;
-  margin: 1%;
+  margin-bottom: 0.1rem;
+  margin-top:  0.1rem;
   border: $btn_border_width;
   border-color: map_get($primary_color, active);
   transition: background-color 0.1s ease;
@@ -94,4 +97,18 @@ $btn_border_width:1px;
     background-color: map_get($default_color, disable);
 
   }
+
 }
+.btn-link{
+  border: none;
+  color: map_get($primary_color, normal);
+  background: #ffffff;
+  &:active {
+    color: map_get($primary_color, active);
+    text-decoration: underline;
+  }
+  &:disabled {
+    color: map_get($primary_color, disable);
+  }
+}
+
