--- a/src/global/rem.scss
+++ b/src/global/rem.scss
@@ -2,8 +2,13 @@ html{
   font-size:20px;
 }
 body{
-  font-size: 1rem;
+  font-size: 0.8rem;
   margin: 0px;
   line-height: 2rem;
   font-family: "Microsoft YaHei";
+}
+p{
+  line-height: 2rem;
+  margin-top: 0.1rem;
+  margin-bottom: 0.1rem;
 }
