--- a/src/utils/utils.scss
+++ b/src/utils/utils.scss
@@ -1,29 +1,31 @@
-@for $i from 1 through 5 {
-  .m-l-#{$i} {
-    margin-left: $i / 10;
+@for $i from 0.1 through 0.5 {
+  .m-l-#{$i*10} {
+    margin-left: $i+rem;
   }
-  .m-r-#{$i} {
-    margin-right: $i / 10;
+  .m-r-#{$i*10} {
+    margin-right: $i+rem;
   }
-  .m-t-#{$i} {
-    margin-top: $i / 10 rem;
+  .m-t-#{$i*10} {
+    margin-top: $i+rem;
   }
-  .m-b-#{$i} {
-    margin-bottom: $i / 10 rem;
+  .m-b-#{$i*10} {
+    margin-bottom: $i+rem;
   }
 
-  .p-l-#{$i} {
-    padding-left: $i / 10 rem;
+  .p-l-#{$i*10} {
+    padding-left: $i+rem;
   }
-  .p-r-#{$i} {
-    padding-right: $i / 10 rem;
+  .p-r-#{$i*10} {
+    padding-right: $i+rem;
   }
-  .p-t-#{$i} {
-    padding-top: $i / 10 rem;
+  .p-t-#{$i*10} {
+    padding-top: $i+rem;
   }
-  .p-b-#{$i} {
-    padding-bottom: $i / 10 rem;
+  .p-b-#{$i*10} {
+    padding-bottom: $i+rem;
   }
+
+
 
   .full-#{$i} {
     width: 10%*$i;
