--- a/src/layout/flex.scss
+++ b/src/layout/flex.scss
@@ -7,24 +7,58 @@
   align-items: center;
   flex-grow: 1;
   flex-wrap: nowrap;
-
 }
 
-.row-rev {
+.content-start {
+  justify-content: flex-start;
+}
+
+.content-end {
+  justify-content: flex-end;
+}
+
+.content-between {
+  justify-content: space-between;
+}
+
+.content-around {
+  justify-content: space-around;
+}
+
+.content-start {
+  justify-content: flex-start;
+}
+
+.cell-rev {
   flex-direction: row-reverse;
 }
 
-.row-start {
+.cell-start {
   align-items: flex-start;
 }
 
-.row-end {
+.cell-end {
   align-items: flex-end;
 }
 
+.cell-stretch {
+  align-items: stretch;
+}
+
+.self-start {
+  align-self: flex-start;
+}
+
+.self-end {
+  align-self: flex-end;
+}
+
+.self-stretch {
+  align-self: stretch;
+}
 
 @for $i from 1 through 5 {
-  .row-cell-#{$i} {
+  .cell-#{$i} {
     flex-grow: $i;
     text-align: center;
   }
@@ -34,18 +68,26 @@
   @extend .row;
   flex-direction: column;
   align-content: stretch;
-
+  width: 100%;
+  height: 100%;
 }
 
-@for $i from 1 through 5 {
-  .col-cell-#{$i} {
-    flex-grow: $i;
-    text-align: center;
-    width: 100%;
-  }
-}
-
-
-.cel-full{
+.cell-full {
   flex-basis: 100%;
+  width: 100%;
+  text-align: center;
+  overflow: hidden;
+}
+
+.cell-scroll-y {
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.cell-scroll-x {
+  width: 100%;
+  overflow-x: scroll;
+}
+.col-full{
+  width: 100%;
 }
