--- a/index.scss
+++ b/index.scss
@@ -1,7 +1,7 @@
 @import "./src/global/color";
 @import "./src/global/rem";
 @import "./src/global/utils";
+@import "./src/base/text/text";
 @import "./src/base/input/input";
 @import "./src/base/button/button";
 @import "./src/layout/flex";
-@import "./src/utils/utils";
