- 修复 col 嵌套问题

--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,7 @@
 @import "./src/global/color";
 @import "./src/global/rem";
 @import "./src/global/utils";
+@import "./src/base/bg/bg";
 @import "./src/base/text/text";
 @import "./src/base/input/input";
 @import "./src/base/button/button";
