--- a/src/layout/flex.scss
+++ b/src/layout/flex.scss
@@ -1,12 +1,18 @@
 @import "../global/rem";
-
-.row {
+.flex {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
-  flex-wrap: nowrap;
+}
+.row {
+  @extend .flex;
+  flex-direction: row;
+}
+
+.col {
+  @extend .flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .content-start {
@@ -24,36 +30,28 @@
 .content-around {
   justify-content: space-around;
 }
+//相对交轴对齐方式
+.cross-start {
+   align-items: flex-start;
+ }
 
-.content-start {
-  justify-content: flex-start;
-}
-
-.cell-rev {
-  flex-direction: row-reverse;
-}
-
-.cell-start {
-  align-items: flex-start;
-}
-
-.cell-end {
+.cross-end {
   align-items: flex-end;
 }
 
-.cell-stretch {
+.cross-stretch {
   align-items: stretch;
 }
-
-.self-start {
+//单个子元素相对容器对齐方式
+.cell-start {
   align-self: flex-start;
 }
 
-.self-end {
+.cell-end {
   align-self: flex-end;
 }
 
-.self-stretch {
+.cell-stretch {
   align-self: stretch;
 }
 
@@ -63,36 +61,20 @@
     text-align: center;
   }
 }
-
-.col {
-  @extend .row;
-  flex-direction: column;
-  align-content: stretch;
+.cell-full{
   width: 100%;
 }
 
-.cell-full {
-  flex-basis: 100%;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  overflow: hidden;
-}
-
-.col-match{
-  height:100%;
-}
 .cell-scroll-y {
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .cell-scroll-x {
   width: 100%;
-  overflow-x: scroll;
-  white-space:nowrap;
+  overflow-x: auto;
+  white-space: nowrap;
 }
-.col-full{
-  width: 100%;
-  text-align: center;
-}
+
+
+
