--- a/src/layout/flex.scss
+++ b/src/layout/flex.scss
@@ -1,19 +1,25 @@
 @import "../global/rem";
+
 .flex {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
+
 .row {
   @extend .flex;
   flex-direction: row;
 }
 
+.wrap {
+  flex-wrap: wrap;
+}
+
+
 .col {
   @extend .flex;
   flex-direction: column;
-  height: 100%;
 }
 
 .content-start {
@@ -31,10 +37,11 @@
 .content-around {
   justify-content: space-around;
 }
+
 //相对交轴对齐方式
 .cross-start {
-   align-items: flex-start;
- }
+  align-items: flex-start;
+}
 
 .cross-end {
   align-items: flex-end;
@@ -43,6 +50,7 @@
 .cross-stretch {
   align-items: stretch;
 }
+
 //单个子元素相对容器对齐方式
 .cell-start {
   align-self: flex-start;
@@ -62,10 +70,18 @@
     text-align: center;
   }
 }
-.cell-full{
-  width: 100%;
+
+.h-match {
+  height: 100%;
 }
 
+.w-match {
+  width: 100%;
+}
+.match{
+  width: 100%;
+  height: 100%;
+}
 .cell-scroll-y {
   height: 100%;
   overflow-y: auto;
