--- a/src/layout/flex.scss
+++ b/src/layout/flex.scss
@@ -1,4 +1,4 @@
-@import "../global/rem";
+@import "../global/reset";
 
 .flex {
   display: flex;
@@ -15,7 +15,6 @@
 .wrap {
   flex-wrap: wrap;
 }
-
 
 .col {
   @extend .flex;
@@ -78,10 +77,12 @@
 .w-match {
   width: 100%;
 }
-.match{
+
+.match {
   width: 100%;
   height: 100%;
 }
+
 .cell-scroll-y {
   height: 100%;
   overflow-y: auto;
@@ -93,5 +94,10 @@
   white-space: nowrap;
 }
 
+@for $i from 1 through 20 {
+  .basic-#{$i} {
+    flex-basis: $i*5%;
+  }
+}
 
 
